--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
@@ -31,11 +31,98 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy without scaling: 1.0000\n",
+      "Accuracy with Min-Max Scaling: 1.0000\n",
+      "Accuracy with Standardization: 1.0000\n",
+      "Accuracy with Robust Scaling: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, RobustScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load Iris dataset\n",
+    "iris = load_iris()\n",
+    "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "y = iris.target\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# --- Question 1: Impact of Feature Scaling ---\n",
+    "# Train KNN on unscaled data\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred_unscaled = knn.predict(X_test)\n",
+    "acc_unscaled = accuracy_score(y_test, y_pred_unscaled)\n",
+    "\n",
+    "print(f\"Accuracy without scaling: {acc_unscaled:.4f}\")\n",
+    "\n",
+    "# --- Question 2: Min-Max Scaling ---\n",
+    "minmax_scaler = MinMaxScaler()\n",
+    "X_train_minmax = minmax_scaler.fit_transform(X_train)\n",
+    "X_test_minmax = minmax_scaler.transform(X_test)\n",
+    "\n",
+    "knn.fit(X_train_minmax, y_train)\n",
+    "y_pred_minmax = knn.predict(X_test_minmax)\n",
+    "acc_minmax = accuracy_score(y_test, y_pred_minmax)\n",
+    "print(f\"Accuracy with Min-Max Scaling: {acc_minmax:.4f}\")\n",
+    "\n",
+    "# --- Question 3: Standardization (Z-score Scaling) ---\n",
+    "std_scaler = StandardScaler()\n",
+    "X_train_std = std_scaler.fit_transform(X_train)\n",
+    "X_test_std = std_scaler.transform(X_test)\n",
+    "\n",
+    "knn.fit(X_train_std, y_train)\n",
+    "y_pred_std = knn.predict(X_test_std)\n",
+    "acc_std = accuracy_score(y_test, y_pred_std)\n",
+    "print(f\"Accuracy with Standardization: {acc_std:.4f}\")\n",
+    "\n",
+    "# --- Question 4: Robust Scaling ---\n",
+    "robust_scaler = RobustScaler()\n",
+    "X_train_robust = robust_scaler.fit_transform(X_train)\n",
+    "X_test_robust = robust_scaler.transform(X_test)\n",
+    "\n",
+    "knn.fit(X_train_robust, y_train)\n",
+    "y_pred_robust = knn.predict(X_test_robust)\n",
+    "acc_robust = accuracy_score(y_test, y_pred_robust)\n",
+    "print(f\"Accuracy with Robust Scaling: {acc_robust:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
