--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_2.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_2.ipynb
@@ -45,11 +45,311 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+      "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+      "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+      "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+      "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+      "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+      "\n",
+      "     who  adult_male deck  embark_town alive  alone  \n",
+      "0    man        True  NaN  Southampton    no  False  \n",
+      "1  woman       False    C    Cherbourg   yes  False  \n",
+      "2  woman       False  NaN  Southampton   yes   True  \n",
+      "3  woman       False    C  Southampton   yes  False  \n",
+      "4    man        True  NaN  Southampton    no   True  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype   \n",
+      "---  ------       --------------  -----   \n",
+      " 0   survived     891 non-null    int64   \n",
+      " 1   pclass       891 non-null    int64   \n",
+      " 2   sex          891 non-null    object  \n",
+      " 3   age          714 non-null    float64 \n",
+      " 4   sibsp        891 non-null    int64   \n",
+      " 5   parch        891 non-null    int64   \n",
+      " 6   fare         891 non-null    float64 \n",
+      " 7   embarked     889 non-null    object  \n",
+      " 8   class        891 non-null    category\n",
+      " 9   who          891 non-null    object  \n",
+      " 10  adult_male   891 non-null    bool    \n",
+      " 11  deck         203 non-null    category\n",
+      " 12  embark_town  889 non-null    object  \n",
+      " 13  alive        891 non-null    object  \n",
+      " 14  alone        891 non-null    bool    \n",
+      "dtypes: bool(2), category(2), float64(2), int64(4), object(5)\n",
+      "memory usage: 80.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Load Titanic dataset\n",
+    "titanic = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Show basic info\n",
+    "print(titanic.head())\n",
+    "print(titanic.info())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label Encoded 'Sex': [1 0 0 0 1 1 1 1 0 0]\n",
+      "One-Hot Encoded 'Sex':\n",
+      "    sex_female  sex_male\n",
+      "0       False      True\n",
+      "1        True     False\n",
+      "2        True     False\n",
+      "3        True     False\n",
+      "4       False      True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "# Extract 'Sex' column and drop NAs for clean demo\n",
+    "sex = titanic['sex'].dropna()\n",
+    "\n",
+    "# Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "sex_label_encoded = le.fit_transform(sex)\n",
+    "print(\"Label Encoded 'Sex':\", sex_label_encoded[:10])\n",
+    "\n",
+    "# One-Hot Encoding using pandas\n",
+    "sex_onehot = pd.get_dummies(sex, prefix='sex')\n",
+    "print(\"One-Hot Encoded 'Sex':\\n\", sex_onehot.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    age  age_scaled     fare  fare_scaled\n",
+      "0  22.0    0.271174   7.2500    -0.502445\n",
+      "1  38.0    0.472229  71.2833     0.786845\n",
+      "2  26.0    0.321438   7.9250    -0.488854\n",
+      "3  35.0    0.434531  53.1000     0.420730\n",
+      "4  35.0    0.434531   8.0500    -0.486337\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "\n",
+    "# Select numerical columns\n",
+    "num_cols = ['age', 'fare']\n",
+    "\n",
+    "# For demo, fill NA\n",
+    "titanic[num_cols] = titanic[num_cols].fillna(titanic[num_cols].median())\n",
+    "\n",
+    "# Apply Min-Max Scaling to 'age', Standardization to 'fare'\n",
+    "scaler_minmax = MinMaxScaler()\n",
+    "scaler_std = StandardScaler()\n",
+    "\n",
+    "titanic['age_scaled'] = scaler_minmax.fit_transform(titanic[['age']])\n",
+    "titanic['fare_scaled'] = scaler_std.fit_transform(titanic[['fare']])\n",
+    "\n",
+    "print(titanic[['age', 'age_scaled', 'fare', 'fare_scaled']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sex_male  embarked_Q  embarked_S  embarked_missing\n",
+      "0      True       False        True             False\n",
+      "1     False       False       False             False\n",
+      "2     False       False        True             False\n",
+      "3     False       False        True             False\n",
+      "4      True       False        True             False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select categorical features with missing values handled\n",
+    "cat_cols = ['sex', 'embarked']\n",
+    "titanic[cat_cols] = titanic[cat_cols].fillna('missing')\n",
+    "\n",
+    "# One-hot encode\n",
+    "titanic_encoded = pd.get_dummies(titanic, columns=cat_cols, drop_first=True)\n",
+    "\n",
+    "print(titanic_encoded.filter(regex='sex_|embarked_').head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   pclass  pclass_encoded\n",
+      "0       3             0.0\n",
+      "1       1             2.0\n",
+      "2       3             0.0\n",
+      "3       1             2.0\n",
+      "4       3             0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "# Pclass: 1 (1st class), 2 (2nd), 3 (3rd) - ranked from 1 (highest) to 3 (lowest)\n",
+    "ordinal_enc = OrdinalEncoder(categories=[['3', '2', '1']])  # order: worst to best\n",
+    "\n",
+    "# Convert pclass to string to match categories\n",
+    "pclass_str = titanic['pclass'].astype(str).values.reshape(-1,1)\n",
+    "\n",
+    "# Fit and transform\n",
+    "pclass_encoded = ordinal_enc.fit_transform(pclass_str)\n",
+    "titanic['pclass_encoded'] = pclass_encoded\n",
+    "\n",
+    "print(titanic[['pclass', 'pclass_encoded']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree accuracy (no scaling): 0.6681614349775785\n",
+      "SVM accuracy (no scaling): 0.6591928251121076\n",
+      "Decision Tree accuracy (with scaling): 0.672645739910314\n",
+      "SVM accuracy (with scaling): 0.7309417040358744\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Prepare dataset with numeric features only for simplicity\n",
+    "titanic_clean = titanic.dropna(subset=['age', 'fare', 'pclass', 'survived'])\n",
+    "X = titanic_clean[['age', 'fare', 'pclass']]\n",
+    "y = titanic_clean['survived']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "# No scaling\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "svm = SVC(random_state=42)\n",
+    "\n",
+    "dt.fit(X_train, y_train)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Decision Tree accuracy (no scaling):\", accuracy_score(y_test, dt.predict(X_test)))\n",
+    "print(\"SVM accuracy (no scaling):\", accuracy_score(y_test, svm.predict(X_test)))\n",
+    "\n",
+    "# With scaling (StandardScaler)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "dt.fit(X_train_scaled, y_train)\n",
+    "svm.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "print(\"Decision Tree accuracy (with scaling):\", accuracy_score(y_test, dt.predict(X_test_scaled)))\n",
+    "print(\"SVM accuracy (with scaling):\", accuracy_score(y_test, svm.predict(X_test_scaled)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'cabin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3791\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3790\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3792\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'cabin'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m     freq \u001b[38;5;241m=\u001b[39m df[col]\u001b[38;5;241m.\u001b[39mvalue_counts(normalize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df[col]\u001b[38;5;241m.\u001b[39mmap(freq)\n\u001b[0;32m----> 5\u001b[0m titanic[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcabin_freq_enc\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mfrequency_encoding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtitanic\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcabin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mfillna(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(titanic[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcabin\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcabin_freq_enc\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10\u001b[39m))\n",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m, in \u001b[0;36mfrequency_encoding\u001b[0;34m(df, col)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mfrequency_encoding\u001b[39m(df, col):\n\u001b[0;32m----> 2\u001b[0m     freq \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mvalue_counts(normalize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df[col]\u001b[38;5;241m.\u001b[39mmap(freq)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3796\u001b[0m     ):\n\u001b[1;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'cabin'"
+     ]
+    }
+   ],
+   "source": [
+    "def frequency_encoding(df, col):\n",
+    "    freq = df[col].value_counts(normalize=True)\n",
+    "    return df[col].map(freq)\n",
+    "\n",
+    "titanic['cabin_freq_enc'] = frequency_encoding(titanic, 'cabin').fillna(0)\n",
+    "\n",
+    "print(titanic[['cabin', 'cabin_freq_enc']].head(10))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
