--- a/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
+++ b/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
@@ -35,11 +35,62 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Step 1: Load the dataset\n",
+    "df = pd.read_csv('sales_data.csv')\n",
+    "\n",
+    "print(f\"Original dataset shape: {df.shape}\")\n",
+    "print(df['Monthly_Sales'].describe())\n",
+    "\n",
+    "# Step 2: Calculate Q1, Q3, and IQR for Monthly_Sales\n",
+    "Q1 = df['Monthly_Sales'].quantile(0.25)\n",
+    "Q3 = df['Monthly_Sales'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "print(f\"Q1: {Q1}\")\n",
+    "print(f\"Q3: {Q3}\")\n",
+    "print(f\"IQR: {IQR}\")\n",
+    "\n",
+    "# Step 3: Identify outliers\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "print(f\"Lower bound: {lower_bound}\")\n",
+    "print(f\"Upper bound: {upper_bound}\")\n",
+    "\n",
+    "# Find outliers (for inspection)\n",
+    "outliers = df[(df['Monthly_Sales'] < lower_bound) | (df['Monthly_Sales'] > upper_bound)]\n",
+    "print(f\"Number of outliers detected: {outliers.shape[0]}\")\n",
+    "\n",
+    "# Step 4: Remove outliers\n",
+    "df_clean = df[(df['Monthly_Sales'] >= lower_bound) & (df['Monthly_Sales'] <= upper_bound)]\n",
+    "\n",
+    "# Step 5: Verify removal\n",
+    "print(f\"Dataset shape after removing outliers: {df_clean.shape}\")\n",
+    "print(f\"Number of rows removed: {df.shape[0] - df_clean.shape[0]}\")\n",
+    "\n",
+    "# Optional: Summary statistics after removal\n",
+    "print(df_clean['Monthly_Sales'].describe())\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
